<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="default_text">--</string>
    <string name="app_name">Oxyrem: Patient</string>
    <string name="title_activity_main"></string>
    <string name="action_settings">Settings</string>
    <string name="heartmonitor">Heart Rate Monitor</string>
    <string name="history_button">History</string>
    <string name="title_activity_heart_rate_monitor">HeartRateMonitor</string>


    <!-- Strings related to login and registration -->
    <string name="title_activity_login">Oxyrem RPMS</string>
    <string name="logo_description">Oxyrem</string>
    <string name="login_intro_text">For patients, and doctors!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <!-- Strings related to the drawer -->
    <string name="profile_name">Quinci Jones</string>
    <string name="profile_description">quinci_jones@email.icom</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
