<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.oxyrem.patient.gui.LoginActivity">

<!-- Login progress -->

<LinearLayout
    android:id="@+id/login_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone" >

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

</LinearLayout>

<!-- Login form -->

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay"
        android:background="@drawable/bg_login"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <ImageView
                android:id="@+id/loginImageView"
                android:layout_width="207dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_oxyrem" />

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/login_intro_text"
                android:textColor="@color/grey46"
                android:textSize="21sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/steel_blue3" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/action_register"
                android:textSize="20sp"
                android:background="@drawable/ui_edittext_squared"
                android:textColor="@color/deep_sky_blue" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</FrameLayout>
