<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.oxyrem.patient.gui.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hrmButton"
        android:text="@string/heartmonitor"
        android:background="@drawable/rounded_blue_white_bg"
        android:textColor="@drawable/textcolor_home"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/history_button"
        android:id="@+id/historyButton"
        android:background="@drawable/rounded_blue_white_bg"
        android:textColor="@drawable/textcolor_home"
        android:layout_below="@+id/hrmButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/hrmButton"/>

</RelativeLayout>
